public/css/custom.css
/* C A L F R E S H    A N D   S O   C L E A N */
/* Calfres-and-so-clean is meant to be a dead simple form for SNAP applicant */
/* These styles are overrides and modifications on top of Bootsrap 3 */
/* If you want to suggest an improvement to these styles, please visit: */
/* https://github.com/codeforamerica/calfresh-and-so-clean/issues */


/* C O L O R S */

/* San Francisco Red Orange: #CF6354
/* Government blue: #2E394B*/
/* Government bright gray type for header: BAC2CC*/
/* Government gray type on blue: 929AA5*/
/* Calfresh blue: #00618D; */
/* alternates */
/* darker #00618D*/
/* mid #BAD2DF*/
/* light #DFE9EE */

/* B O O T S T R A P   O V E R R I D E */


/* F O N T S */

.masthead p {
  font-family: "brandon-grotesque", sans-serif;
  font-weight: 700;
  letter-spacing: 0.0625em;
  display: inline-block;
  padding-right: 0.625em;
  margin-top: 8px;
  margin-bottom: 8px;
}

.logo {
	color: white;
}

.divider {
	color: white;
	opacity: .25;
}

.program {
	color: #F1AB00;
/*	color: #CF6354;*/
}

.masthead h3 {
	margin-top: 8px;
}

h3 {
  font-family: "ff-tisa-web-pro", serif;
  font-weight: 700;
  color: #2E394B;
  font-size: 21px;
  line-height: 1.4;
  margin-bottom: 0;
 }

 h4 {
 	font-family: "ff-tisa-web-pro", serif;
 	font-size: 14px;
 	font-weight: 700;
 	color: #2E394B;
 	margin-top: 0;
 }

.page-footer h4 {
	margin-top: 10px;
}

.form {
  font-family: "ff-tisa-sans-web-pro", sans-serif;
 }

 .next-step {
 	font-family: "ff-tisa-sans-web-pro", sans-serif;
 	font-weight: 500;
 	font-size: 14px;
 }

/* G L O B A L S */

/* in each context, redefine the equal height and width of the circle */
.circle {
	border-radius: 50%;
}


body {
	margin: 0;
	background:  #fff;
	width: 100%;
	height: 100%;
}

#main {
	background: #fff;
/*	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
	box-shadow: 0 0 5px #888;
	overflow: auto;*/
}


/* T H E    M A S T H E A D  */
/* Masthead content sticks to the top of each view, and presents metadata about the application */

.masthead {
	display: inline-block;
	width: 100%;
	height: auto;
	padding: .2em 0;
	/* Blue background color */
	background-color: #2E394B;
}

/* F O R M   S T Y L E S */

.form {
}

.page-content {
	padding-bottom: 1em;
}

.form-group {
	padding: 1em 0 0 0;
}

/* form-controls, by position in a stack. */
/* There can only be one top and one bottom, but there can be many middles.*/

.solo {
	height: 3.5em;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.form-context {
	width: auto;
	display: block;
	color: #6F6F6F;
	font-weight: 700;
	opacity: .9;
}

.header {
	background-color: #929AA5;
}

.form-control {
	font-size: 14px;
}
.form-control h4 {
	color: #fff;
}

/* For now, subheader is exclusive. It shouldn't be mixed with top/middle/bottom */
/* It takes properties from middle, assuming a header above and content below */
/* The change is that the heigh is dynamic based on content */
.subheader {
	height: auto;
	min-height: 3.5em;
	border: none;
	-webkit-box-shadow: none;
	box-shadow: none;
	padding-left: 0;
	padding-right: 0;
}

.subheader p {
	margin: 10px 0px;
	line-height: 1.6em;
}

.top {
	height: 4em;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	-webkit-box-shadow: none;
	box-shadow: none;
}
.middle {
	height: auto;
	min-height: 4em;
	border-radius: 0;
	border-top: none;
	border-left: none;
	border-right: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}
.bottom {
	height: auto;
	min-height: 4em;
	border-left: none;
	border-right: none;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	border-top: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.dropdown {
	height: 4em;
}

.checkbox {
	display: inline-block;
}

.times-of-day .checkbox {
	padding-top: .5em;
	padding-bottom: .5em;
	padding-right: 20px;
	padding-left: 0;
}

.times-of-day .checkbox input[type=checkbox] {
	float: none;
	margin-left: 0;
	padding-right: 20px;
}

.days-of-week .checkbox {
	padding-top: .5em;
	padding-bottom: .5em;
	padding-right: 20px;
	padding-left: 0;
}

.days-of-week .checkbox input[type=checkbox] {
	float: none;
	margin-left: 0;
	padding-right: 20px;
}

/* F O R M   B U T T O N / T O G G L E */

.btn-primary {
	height: 4em;
	color: #555;
	text-shadow: none;
	background-color: white;
/*	background-color: #5C93D6;*/
	border-color: #ccc;
	opacity: .85;
}

.btn-primary:hover {
	color: #333;
	background-color: #F3F3F3;
	border-color: #ccc;
}

.btn-primary:focus {
	color: #333;
	background-color: #F3F3F3;
	border-color: #ccc;
}


.btn-primary:active, .btn-primary.active {
	color: #333;
	background-color: #E6E6E6;
	-webkit-box-shadow: none;
	box-shadow: none;
	border-color: #ccc;
	opacity: .85;
}

/* This is a hack of Bootstrap's input/button madness */
.btn-primary.form-button-3 {
	min-height: 3.5em;
	height: auto;
	width: 33%;
	-webkit-box-shadow: none;
	box-shadow: none;
	background-image: none;
	border-radius: 0;
}

/* This is a hack of Bootstrap's input/button madness */
.btn-primary.form-button-2 {
	height: 3.5em;
	width: 50%;
	-webkit-box-shadow: none;
	box-shadow: none;
	background-image: none;
	border-radius: 0;
}


.form-button:hover {
}


/* Left button in 2 and 3 button groups */
.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle) {
	border-right: none;
}

/* Middle button in 3 button groups */
.btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
	border-right: none;
}

/* Right button in 2 and 3 button groups */
.btn-group>.btn:last-child:not(:first-child), .btn-group>.dropdown-toggle:not(:first-child) {
}

.btn-primary.form-button-link-left {
	height: 3em;
	line-height: 2.428571;
	width: 48%;
	float: left;
	border-right: 1px solid #ccc;
	background-color: #F3F3F3;
	-webkit-box-shadow: none;
	box-shadow: none;
	background-image: none;
	border-radius: 0;
	line-height: 2;
	margin: 10px 0;
}

.btn-primary.form-button-link-right {
	height: 3em;
	line-height: 2.428571;
	width: 48%;
	float: right;
	border-right: 1px solid #ccc;
	background-color: #F3F3F3;
	-webkit-box-shadow: none;
	box-shadow: none;
	background-image: none;
	border-radius: 0;
	line-height: 2;
	margin: 10px 0;
}

.btn-primary.form-button-link-right:hover {
	background-color: #E6E6E6;
}
.btn-primary.form-button-link-right:active {
	background-color: #E6E6E6;
}

.btn-primary.form-button-link-left:hover {
	background-color: #E6E6E6;
}

.btn-primary.form-button-link-right:hover {
	background-color: #E6E6E6;
}

.form-button-link-solo {
	color: #555;
	height: 3.5em;
	line-height: 2.6;
	width: 100%;
	-webkit-box-shadow: none;
	box-shadow: none;
	background-image: none;
	border-radius: 0;
}
/* F O R M   L I S T S */

/* Sie by side lists, found on the interview.html */
/* We want two columns, taking up the entire width of
the content column, so we override bootstrap.*/

/* F I L E   U P L O A D */

.file-group {
	padding-bottom: 1em;
	border-bottom: 1px solid #ccc;
}

.skip {
	width: 100%;
	height: 3em;
	margin: 10px 0;
	background-color: #F3F3F3;
	border-radius: 0;
	border: 1px solid #ccc;
	line-height: 2;
	color: #555;
}

.skip:hover {
	background-color: #E6E6E6;
}
.skip:active {
	background-color: #E6E6E6;
}

/* F O O T E R    S T Y L E S */

.page-footer {
	display: inline-block;
	width: 100%;
	padding: 0;
	margin-bottom: 42px;
}

.next-step {
	width: 100%;
	height: 3em;
	color: #fff;
	background-color: #5C93D6;
	border-radius: 0;
	margin: 10px 0;
}

.next-step:hover {
	color: #fff;
	background-color: #1D71F5;
	opacity: .85;
}

.next-step:focus {
	color: #fff;
	background-color: #1D71F5;
	opacity: .85;
}

.page-footer .or {
	text-align: center;
}

.footer-question {
	padding-top: 1em;
}

/* S I G N A T U R E   F O R M */

#signature_area {
	min-height: 100px;
	border: 1px solid #ccc;
}

/* M E D I A    Q U E R I E S */


/* iPads (portrait and landscape) ----------- */
@media screen and (min-width: 768px)  {}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
/* Styles */
}

/* Smartphones (landscape) ----------- */
@media only screen and (min-width : 321px) {
/* Styles */
}

/* Smartphones (portrait) ----------- */
@media only screen and (max-width : 320px) {
/* Styles */
	#main {
		margin: 0;
		background: #fff;
	}
	.form-button-2 {
		font-size: 11px;
		height: 42px;
	}
	.form-button-3 {
		font-size: 11px;
		height: 42px;
	}
	.next-step {
		font-size: 11px;
		height: 42px;
	}
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
/* Styles */
}

/* iPads (landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
/* Styles */
}

/* iPads (portrait) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
/* Styles */
}


/* K E Y F R A M E S   &    P A G E    T R A N S I T I O N S */

@-webkit-keyframes fadeIn {
  0%   { opacity: 0; }
  100% { opacity: 1; }
}
@-moz-keyframes fadeIn {
  0%   { opacity: 0; }
  100% { opacity: 1; }
}
@-o-keyframes fadeIn {
  0%   { opacity: 0; }
  100% { opacity: 1; }
}
@keyframes fadeIn {
  0%   { opacity: 0; }
  100% { opacity: 1; }
}

/*
 * CSS Page Transitions
 */

